# aws-greengrass-emqx-mqtt

./: .dockerignore  .gitignore  .gitmodules  DEVELOPMENT.md  Dockerfile  Makefile  README.md  THIRD-PARTY-LICENSES  TODO.md  emqx.commit  gdk-build.py  gdk-build.sh  gdk-config.json  rebar.config  recipe-docker.json  recipe.json  windows.bat
.github/: emqx_plugins_patch
.github/workflows/: build.yml  docker.yml
aws_greengrass_emqx_auth/: Makefile  rebar.config
aws_greengrass_emqx_auth/priv/: TODO.md  aws_greengrass_emqx_auth.hocon
aws_greengrass_emqx_auth/src/: aws_greengrass_emqx_auth.app.src  aws_greengrass_emqx_auth.app.src.script  aws_greengrass_emqx_auth.erl  aws_greengrass_emqx_auth_app.erl  aws_greengrass_emqx_auth_cli_demo.erl  aws_greengrass_emqx_auth_schema.erl  aws_greengrass_emqx_certs.erl  aws_greengrass_emqx_conf.erl  aws_greengrass_emqx_listeners.erl  port_driver_integration.erl  tls_custom_certificate_verification.erl
etc/: aws_greengrass_emqx_auth.conf
gg/: .gitignore  rebar.config
gg/src/: gg.app.src  gg.erl  gg_app.erl  gg_certs.erl  gg_cli_demo.erl  gg_conf.erl  gg_listeners.erl  gg_port_driver.erl  gg_schema.erl  gg_sup.erl  gg_tls.erl
gg/test/: emqx_plugin_template_SUITE.erl
patches/: copy_config.cmd  emqx.cmd.diff  emqx.conf  emqx.diff  emqx_ctl.cmd.diff  emqx_ctl.diff  emqx_plugins.app.src  emqx_plugins.erl.patch  entrypoint.sh  erl.diff  loaded_plugins
patches/event_stream/include/aws/eventstreamrpc/: EventStreamClient.h
patches/event_stream/source/: EventStreamClient.cpp
patches/greengrass_ipc/include/aws/greengrass/: GreengrassCoreIpcClient.h  GreengrassCoreIpcModel.h
patches/greengrass_ipc/source/: GreengrassCoreIpcClient.cpp  GreengrassCoreIpcModel.cpp
port_driver/: .clang-tidy  CMakeLists.txt  common.cpp  common.h  config_writer.cpp  defer.h  port_driver.c  port_driver.cpp  port_driver.h
port_driver/cda_integration/: CMakeLists.txt
port_driver/cda_integration/include/: cda_integration.h  logger.h
port_driver/cda_integration/include/private/: certificate_updater.h  certificate_updates_handler.h  configuration_subscriber.h  ipc_wrapper.h  test_utils.h
port_driver/cda_integration/lib/: CMakeLists.txt  cda_integration.cpp  configuration_subscriber.cpp  ipc_client.cpp  ipc_connect.cpp
port_driver/cda_integration/lib/cert_generation/: certificate_updater.cpp  certificate_updater.hpp  certificate_updates_handler.cpp
port_driver/cda_integration/lib/ipc/: ipc_wrapper.cpp  ipc_wrapper.hpp
port_driver/cda_integration/test/: CMakeLists-gtest.txt.in  CMakeLists.txt
port_driver/cmake_include/: clang-format.cmake
port_driver/config_writer/: config_writer.cpp
port_driver/include/: config.h  logger.h
port_driver/test_support/: pom.xml
port_driver/test_support/src/main/java/com/aws/greengrass/ipc/: IPCEventStreamService.java
port_driver/test_support/src/main/java/software/amazon/awssdk/aws/greengrass/: GeneratedAbstractAuthorizeClientDeviceActionOperationHandler.java  GeneratedAbstractGetClientDeviceAuthTokenOperationHandler.java  GeneratedAbstractSubscribeToCertificateUpdatesOperationHandler.java  GeneratedAbstractVerifyClientDeviceIdentityOperationHandler.java  GreengrassCoreIPCService.java
port_driver/test_support/src/main/java/software/amazon/awssdk/eventstreamrpc/: OperationContinuationHandler.java  ServiceOperationMappingContinuationHandler.java
port_driver/test_support/src/test/java/com/aws/greengrass/ipc/: IPCEventStreamServiceTest.java
port_driver/tests/unit/: CMakeLists-gtest.txt.in  CMakeLists.txt
port_driver/tests/unit/src/: erl_diver_empty_impl.cpp  erl_driver_empty_impl.cpp
port_driver/tests/unit/src/cda_integration/: cda_integration_tests.cpp  certificate_updates_handler_tests.cpp  mock_ipc.hpp  test_utils.hpp
port_driver/write_config/: write_config.cpp
priv/: aws_greengrass_emqx_auth.schema
scripts/: config_changer.py  local_deploy.py  update-sdk-version.sh
src/: auth_token_store.erl  aws_greengrass_emqx_auth.app.src  aws_greengrass_emqx_auth.erl  aws_greengrass_emqx_auth_app.erl  aws_greengrass_emqx_auth_cli_demo.erl  aws_greengrass_emqx_auth_listeners.erl  aws_greengrass_emqx_auth_sup.erl  aws_greengrass_emqx_certs.erl  aws_greengrass_emqx_conf.erl  aws_greengrass_emqx_listeners.erl  port_driver_integration.erl  tls_custom_certificate_verification.erl
test/: emqx_plugin_template_SUITE.erl
